# .scripts

./: README.md  conf  install_deps.sh  install_options.sh  install_scripts.sh  locations.txt  note  note.py  one_shot_install.sh  options.env  pyproject.toml  work.py
.scripts/: install_scripts.sh
