[tool.poetry]
name = ".scripts"
version = "0.1.0"
description = ""
authors = ["Blake Smith <blakeinvictoria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
